# pycontextify

./: .env.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  PRD.md  README.md  RELEASING.md  WARP.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: ARCHITECTURE.md  BOOTSTRAP.md  BOOTSTRAP_IMPLEMENTATION_REVIEW.md  BOOTSTRAP_PROJECT_STATUS.md  BOOTSTRAP_TESTS_SUMMARY.md  INDEX.md  MCP_SERVER.md  TESTING.md  TEST_EXECUTION_GUIDE.md  USER_FLOW_TEST.md  WEB_CRAWLING.md  test_suite_audit.md
examples/: cli_usage_examples.py
pycontextify/: __init__.py  bootstrap.py  chunker.py  config.py  crawler.py  embedder.py  embedder_factory.py  embedder_sentence_transformers_embedder.py  index.py  index_codebase.py  index_document.py  index_webpage.py  indexer.py  indexer_loaders.py  indexer_manager.py  indexer_pdf_loader.py  loader.py  mcp.py  mcp_server.py  orchestrator.py  postprocess.py  search.py  search_models.py  storage.py  storage_metadata.py  storage_vector.py  types.py
pycontextify/chunker/: __init__.py
pycontextify/embedder/: __init__.py  factory.py  sentence_transformers_embedder.py
pycontextify/index/: __init__.py  advanced_relationships.py  chunker.py  config.py  entity_extractor.py  hybrid_search.py  knowledge_graph.py  loaders.py  manager.py  metadata.py  models.py  pdf_loader.py  relationship_store.py  reranker.py  search_intelligence.py  search_services.py  vector_store.py
pycontextify/index/embedders/: __init__.py  base.py  factory.py  sentence_transformers_embedder.py
pycontextify/indexer/: __init__.py  loaders.py  manager.py  pdf_loader.py
pycontextify/indexer/services/: __init__.py  bootstrap.py  embedding.py  indexing.py  persistence.py  search.py  system.py
pycontextify/mcp/: __init__.py  server.py
pycontextify/orchestrator/: __init__.py
pycontextify/search/: __init__.py  models.py
pycontextify/storage/: __init__.py  vector.py
scripts/: README.md  build_package.py  bump_version.py  crawl_url.py  debug_directory_indexing.py  debug_lazy_loading.py  debug_mcp_system.py  debug_pdf_indexing.py  detailed_perf.py  fast_startup_test.py  inspect_faiss_index.py  measure_startup_time.py  run_mcp_tests.py  run_vulture.py  test_hf_connectivity.py
tasks/: http_bootstrap_plan.md
tests/: README.md  __init__.py  conftest.py  test_advanced_relationships_basic.py  test_basic.py  test_bootstrap_integration.py  test_chunker.py  test_cli_args.py  test_cli_e2e.py  test_complete_cli_suite.py  test_config.py  test_embeddings.py  test_enhanced_config.py  test_enhanced_integration.py  test_full_cli_integration.py  test_hybrid_search_comprehensive.py  test_integration.py  test_loaders.py  test_mcp_server.py  test_mcp_server_simple.py  test_mcp_simple.py  test_mcp_system.py  test_mcp_system_codebase.py  test_mcp_system_pdf.py  test_mcp_system_web.py  test_metadata.py  test_models.py  test_models_comprehensive.py  test_pdf_loader.py  test_pdf_loader_consolidated.py  test_pdf_loader_quickwin.py  test_persistence_comprehensive.py  test_recursive_crawling.py  test_relationship_store.py  test_reranker_streamlined.py  test_search_services_comprehensive.py  test_vector_store.py  test_vector_store_consolidated.py  test_webpage_cli.py  test_webscraping.py
tests/integration/: __init__.py  test_bootstrap_integration.py  test_hybrid_search.py  test_integration.py  test_loaders.py  test_mcp_server.py  test_persistence.py  test_recursive_crawling.py  test_user_flow.py
tests/smoke/: README.md  __init__.py  run_smoke_tests.py  test_mcp_functionality.py  test_mcp_server.py
tests/system/: __init__.py  test_mcp_lazy_loading.py  test_mcp_server_startup.py  test_mcp_stdio_full_system.py  test_mcp_system.py
tests/unit/: __init__.py  test_bootstrap.py  test_chunker.py  test_cli_args.py  test_config.py  test_crawler.py  test_embeddings.py  test_hybrid_search.py  test_indexing.py  test_loader.py  test_loaders.py  test_metadata.py  test_models.py  test_pdf_loader.py  test_postprocess.py  test_search.py  test_services.py  test_storage_metadata_backward_compatibility.py  test_vector_store.py
